# Warp-firmware

./: .gitignore  .gitmodules  MAINTAINERS.txt  Makefile  README.md  config.h  setup.conf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: make.yml
doc/: README-CodingConventions.md  warp-codingConventions.txt
src/boot/ksdk1.1.0/: CMakeLists-FRDMKL03.txt  CMakeLists-Glaux.txt  CMakeLists-Warp.txt  CMakeLists.txt  Glaux.srec  MKL05Z32xxx4_flash.ld  README.md  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c  adc16_Waterlevel.h  adc16_Waterlevel_blocking.c  boot.c  byteUtilities.c  byteUtilities.h  config  config.h  devADXL362.c  devADXL362.h  devAMG8834.c  devAMG8834.h  devAS7262.c  devAS7262.h  devAS7263.c  devAS7263.h  devAS726x.c  devAS726x.h  devAT45DB.c  devAT45DB.h  devBGX.c  devBGX.h  devBME680.c  devBME680.h  devBMX055.c  devBMX055.h  devBNO055.c  devBNO055.h  devCC2564C.c  devCC2564C.h  (+48 more)
src/boot/ksdk1.1.0/btstack/: btstack_config.h  btstack_main.h  hal_cpu.c  hal_led.c  hal_tick.c  hal_time_ms.c  hal_uart_dma.c  led_counter.c  led_counter.h
src/boot/ksdk1.1.0/felix/: felix_main.c  felix_main.h
tools/: README.md
tools/gui/: README.md  RTTclient.py  UItestData.py  felix_gui.pde
tools/scripts/: glaux.jlink.commands  jlink.commands  warp.jlink.commands
tools/sdk/: README.md
tools/sdk/ksdk1.1.0/demos/Glaux/armgcc/Glaux/: CMakeLists.txt  build_release.bat
tools/sdk/ksdk1.1.0/demos/Warp/armgcc/Warp/: CMakeLists.txt
tools/sdk/ksdk1.1.0/lib/ksdk_hal_lib/armgcc/KL03Z4/: CMakeLists.txt
tools/sdk/ksdk1.1.0/lib/ksdk_platform_lib/armgcc/KL03Z4/: CMakeLists.txt  Makefile  cmake_install.cmake
tools/sdk/ksdk1.1.0/lib/ksdk_startup_lib/armgcc/KL03Z4/: CMakeLists.txt  build_all.bat  build_debug.bat
tools/sdk/ksdk1.1.0/lib/ksdk_std_lib/armgcc/KL03Z4/: CMakeLists.txt
tools/sdk/ksdk1.1.0/platform/CMSIS/SVD/: MK02F12810.svd  MK24F12.svd  MK24F25612.svd  MKL46Z4.svd  MKV30F12810.svd  MKV31F51212.svd
tools/sdk/ksdk1.1.0/platform/composite/inc/: fsl_sdcard_spi.h  fsl_sdhc_card.h  fsl_soundcard.h
tools/sdk/ksdk1.1.0/platform/composite/src/sdcard/: fsl_sdcard_spi.c  fsl_sdhc_card.c
tools/sdk/ksdk1.1.0/platform/composite/src/soundcard/: fsl_soundcard.c
tools/sdk/ksdk1.1.0/platform/drivers/inc/: fsl_adc16_driver.h  fsl_cadc_driver.h  fsl_cop_driver.h  fsl_crc_driver.h  fsl_dma_request.h  fsl_dspi_edma_master_driver.h  fsl_dspi_edma_slave_driver.h  fsl_dspi_master_driver.h  fsl_dspi_slave_driver.h  fsl_edma_request.h  fsl_enet_driver.h  fsl_flexcan_driver.h  fsl_gpio_driver.h  fsl_i2c_master_driver.h  fsl_i2c_slave_driver.h  fsl_lpsci_driver.h  fsl_lpuart_edma_driver.h  fsl_mpu_driver.h  fsl_pit_driver.h  fsl_rnga_driver.h  fsl_rtc_driver.h  fsl_sdhc.h  fsl_sdhc_driver.h  fsl_spi_dma_master_driver.h  fsl_spi_dma_slave_driver.h  fsl_spi_master_driver.h  fsl_spi_slave_driver.h  fsl_tsi_driver.h  fsl_uart_driver.h
tools/sdk/ksdk1.1.0/platform/drivers/src/adc16/: fsl_adc16_driver.c  fsl_adc16_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/cmp/: fsl_cmp_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/cop/: fsl_cop_common.c  fsl_cop_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/crc/: fsl_crc_common.c  fsl_crc_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/cyclicAdc/: fsl_cadc_common.c  fsl_cadc_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/dac/: fsl_dac_driver.c  fsl_dac_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/dspi/: fsl_dspi_common.c  fsl_dspi_edma_master_driver.c  fsl_dspi_edma_shared_function.h  fsl_dspi_irq.c  fsl_dspi_shared_function.c  fsl_dspi_shared_function.h  fsl_dspi_slave_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/edma/: fsl_edma_common.c  fsl_edma_driver.c  fsl_edma_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/enet/: fsl_enet_driver.c  fsl_enet_irq.c  fsl_enet_rtcs_adapter.c  fsl_enet_rtcs_adapter.h
tools/sdk/ksdk1.1.0/platform/drivers/src/ewm/: fsl_ewm_common.c  fsl_ewm_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/flexcan/: fsl_flexcan_common.c  fsl_flexcan_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/ftm/: fsl_ftm_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/gpio/: fsl_gpio_common.c  fsl_gpio_driver.c  fsl_gpio_irq.c
tools/sdk/ksdk1.1.0/platform/drivers/src/i2c/: fsl_i2c_irq.c  fsl_i2c_master_driver.c  fsl_i2c_shared_function.c  fsl_i2c_shared_function.h  fsl_i2c_slave_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/lpsci/: fsl_lpsci_common.c  fsl_lpsci_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/lptmr/: fsl_lptmr_common.c  fsl_lptmr_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/lpuart/: fsl_lpuart_driver.c  fsl_lpuart_edma_driver.c
tools/sdk/ksdk1.1.0/platform/drivers/src/mpu/: fsl_mpu_common.c  fsl_mpu_irq.c
tools/sdk/ksdk1.1.0/platform/hal/inc/: fsl_adc16_hal.h  fsl_cmp_hal.h  fsl_cop_hal.h  fsl_crc_hal.h  fsl_dmamux_hal.h  fsl_edma_hal.h  fsl_enet_hal.h  fsl_flexcan_hal.h  fsl_gpio_hal.h  fsl_llwu_hal.h  fsl_lptmr_hal.h  fsl_lpuart_hal.h  fsl_mcg_hal_modes.h  fsl_mcglite_hal.h  fsl_osc_hal.h  fsl_pdb_hal.h  fsl_pmc_hal.h  fsl_port_hal.h  fsl_rcm_hal.h  fsl_rtc_hal.h  fsl_sai_hal.h  fsl_sim_hal.h  fsl_smc_hal.h  fsl_spi_hal.h  fsl_tpm_hal.h  fsl_tsi_v2_hal_specific.h  fsl_tsi_v4_hal_specific.h
tools/sdk/ksdk1.1.0/platform/osa/inc/: fsl_os_abstraction_bm.h  fsl_os_abstraction_free_rtos.h  fsl_os_abstraction_mqx.h  fsl_os_abstraction_ucosii.h  fsl_os_abstraction_ucosiii.h
tools/sdk/ksdk1.1.0/platform/osa/src/: fsl_os_abstraction_bm.c  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_mqx.c  fsl_os_abstraction_ucosii.c  fsl_os_abstraction_ucosiii.c
tools/sdk/ksdk1.1.0/platform/startup/: startup.c
tools/sdk/ksdk1.1.0/platform/startup/MKL03Z4/: system_MKL03Z4.c  system_MKL03Z4.h
tools/sdk/ksdk1.1.0/platform/system/inc/: fsl_clock_manager.h  fsl_hwtimer.h  fsl_hwtimer_systick.h  fsl_interrupt_manager.h  fsl_power_manager.h
tools/sdk/ksdk1.1.0/platform/utilities/inc/: fsl_debug_console.h
tools/sdk/ksdk1.1.0/platform/utilities/src/: fsl_debug_console.c  fsl_misc_utilities.c  print_scan.c  syscalls.c  syscalls.c.tmp
(+88 files in other folders)
